<resources>
    <string name="app_name">WASIDEA</string>
    <string name="action_settings"></string>

    //Main list items
    <string name="make_points">Make Points</string>
    <string name="shopping">Shopping</string>
    <string name="create_coins">Create Coins</string>
    <string name="my_gifts">My Gifts</string>
    <string name="support">Support</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="text1">Come and shop here and enjoy</string>
    <string name="title_activity_main3">Main3Activity</string>

    <string name="login">Login</string>
    <string name="signup">Signup</string>

</resources>
