<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="birdofparadise.myapplication.MainActivity"
    tools:showIn="@layout/activity_main"
    android:background="@drawable/backg">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <Button
        android:gravity="center"
        android:id="@+id/makepoints"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/make_points"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:background="@color/front_color"
         android:layout_marginBottom="15dp"/>

    <Button
        android:gravity="center"
        android:id="@+id/shopping"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/shopping"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:background="@color/front_color"
        android:layout_marginBottom="15dp"
        />

    <Button
        android:gravity="center"
        android:id="@+id/createcoins"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/create_coins"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:background="@color/front_color"
        android:layout_marginBottom="15dp"/>

    <Button
        android:gravity="center"
        android:id="@+id/gifts"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/my_gifts"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:background="@color/front_color"
        android:layout_marginBottom="15dp"/>

    <Button
        android:gravity="center"
        android:id="@+id/support"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/support"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:background="@color/front_color"
        android:layout_marginBottom="15dp"/>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <Button
        android:layout_marginTop="20dp"
        android:id="@+id/login"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:layout_marginLeft="30dp"
        android:layout_marginBottom="15dp" />

    <Button
        android:layout_marginTop="20dp"
        android:id="@+id/signup"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:text="@string/signup"
        android:layout_marginLeft="140dp"
        android:background="@color/front_color"
        android:layout_marginBottom="15dp"


        />
</LinearLayout>
</LinearLayout>





</RelativeLayout>
